# ponder

./: .gitignore  Cargo.toml  README.md
ponder/: Cargo.toml
ponder-db/: Cargo.toml
ponder-db/migrations/: 20250518135809_bootstrap.sql  20250617172733_deck.sql
ponder-db/src/: card.rs  lib.rs  scryfall.rs  updater.rs
ponder/src/: main.rs
ponder/src/data/: card.rs  deck.rs  mod.rs
ponder/src/tui/: mod.rs  state.rs
src/: main.rs  scryfall.rs
