[package]
name = "ponder"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
